# mediariver

./: .gitignore  .releaserc.json  CHANGELOG.md  Dockerfile  README.md  Taskfile.yml  pyproject.toml  pytest_output.txt  task.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  integration.yml  publish.yml  release.yml
demo/: .env  docker-compose.yml
demo/workflows/: demo-audio.yaml  demo-image.yaml  demo-video.yaml
docs/superpowers/plans/: 2026-03-23-mediariver-v010.md  2026-03-24-ai-subtitles.md  2026-03-24-mediariver-desktop.md
docs/superpowers/specs/: 2026-03-23-mediariver-design.md  (+2 more)
installer/: bootstrap.ps1  create-shortcut.ps1  register-startup.ps1  uninstall.ps1
scripts/: audio-normalize-hls.js  video-full-pipeline-hls.js
src/desktop/: config.py  server.py  service.py  tray.py  updater.py
src/mediariver/: __init__.py  __main__.py  cli.py
src/mediariver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py
tests/integration/: test_s3_connection.py  test_workflow_s3.py
tests/unit/: test_action_registry.py  test_actions_audio.py  test_actions_copy.py  test_actions_image.py  test_actions_util.py  test_actions_video.py  test_cli.py  test_connections.py  test_context.py  test_desktop_config.py  test_desktop_server.py  test_desktop_service.py  test_desktop_updater.py  test_errors.py  test_executor.py  test_loader.py  test_runner.py  test_schema.py  test_state.py  test_template.py  test_validators.py  test_watcher.py
workflows/: audio-pipeline.yaml  manga-process.yaml  video-pipeline.yaml
(+72 files in other folders)
