[project]
name = "mediariver"
version = "0.9.3"
description = "Spec-driven media pipeline CLI"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "fs>=2.4",
    "fs-s3fs>=1.1",
    "sqlalchemy>=2.0",
    "structlog>=24.0",
    "blake3>=0.4",
    "docker>=7.0",
    "jinja2>=3.1",
    "httpx>=0.27",
    "setuptools<81",
]

[project.optional-dependencies]
ftp = []
sftp = ["fs.sshfs>=1.0"]
desktop = [
    "pystray>=0.19",
    "Pillow>=10.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.5",
    "mypy>=1.10",
    "minio>=7.2",
]

[project.scripts]
mediariver = "mediariver.cli:app"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["B008", "B017", "B023", "N818"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires external services (minio, ftp)",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_parser = "angular"
major_on_zero = false
tag_format = "v{version}"

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"
